2004-08-16 Bogdan Gheorghe
	Fix for 70113: Search for Template member declarations causes Assertion
	
2004-08-03 Tanya Wolff

	Fix for 71033: English "Find Refs" in Workbench Key preferences.
	*plugin.properties
	*plugin.xml
	
2004-07-29 Tanya Wolff

	Part Fix for 69768: CDT wasn't displaying non-English templates.
	*org.eclipse.cdt.internal.corext.template/Templates.java
	
2004-07-27 Tanya Wolff

	Fix for 70124 -- allow buttons to be expandable for translation
	*org.eclipse.cdt.ui.wizards.conversion/ConvertProjectWizardPage.java

2004-07-16 Tanya Wolff

	Fix for 70543: TVT: Source code displaying in C++ Font and Editor
	* plugin.properties

2004-07-19 Alain Magloire

	Fix for PR 70319: Clearing the console on build.
	* src/org/eclipse/cdt/internal/ui/buildconsole/BuildConsolePartioner.java

2004-07-19 Vladimir Hirsl

	Implementation of HP-UX SOM binary parser page.

	* src/org/eclipse/cdt/ui/dialogs/AbstractGnuBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/CygwinPEBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUElfinaryParserpage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUSomBinaryParserpage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUXCoffinaryParserpage.java
	
2004-07-16 Tanya Wolff

	Fix for 70221: unexternalized strings
	* org.eclipse.cdt.internal.ui/search/CountLabelProvider.java
	* org.eclipse.cdt.internal.ui/search/CSearchMessages.properties

2004-07-15 Tanya Wolff

	Fix for 70124: unexternalized strings
	* org.eclipse.cdt.ui.wizards.conversion/ConvertProjectWizardPage.java
	* org.eclipse.cdt.internal.ui/CUIMessages.properties

	Fix for 70143: duplicate mnemonics in binary parser options
	* org.eclipse.cdt.ui.dialogs.CygwinPEBinaryParserPage.java
	* org.eclipse.cdt.ui.dialogs.GnuElfBinaryParserPage.java
	* org.eclipse.cdt.internal.ui/CUIMessages.properties

2004-07-15 Hoda Amer
	Fix for PR 68500: [Outline View] After doing a rename of a class, the outline viewer does not display the new name (just the old name)

2004-07-09 Hoda Amer