@@ -1,3 +1,8 @@
+2004-08-16 Tanya Wolff
+	Fix for 70906: Duplicate entries in C/C++ preferences
+	src/org.eclipse.cdt.internal.ui.preferences/CeditorHoverConfigurationBlock.java
+
+
 2004-08-16 Bogdan Gheorghe
 	Fix for 70113: Search for Template member declarations causes Assertion
 	
